# Jni_World

./: build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  com_example_jni_VoiceActivity.cpp  com_example_jni_VoiceActivity.h  jni_common.h  native-lib.cpp
app/src/main/java/com/example/jni/: JniTest.java  MainActivity.java  MainActivity.kt  Student.java  TypeChangeActivity.java  VoiceActivity.java
app/src/main/res/layout/: activity_main.xml  activity_voice.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
